Fix modals on mobile

--- a/static/style5/_modals.scss
+++ b/static/style5/_modals.scss
@@ -28,6 +28,7 @@ div.modal_container {
 	background: #000;
 	z-index: 10001;
 	width: 100%;
+	max-height: 70%;
 	@include transform(translate(-50%, -50%) scaleX(0.0) scaleY($initial_height));
 	@include transition-wtime($modal_trans_time, opacity, transform);
 
